<resources>
    <string name="app_name">Telegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Yura</string>
    <string name="settings_default_status">В сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="default_number_phone">+79996401469</string>
    <string name="settings_label_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="default_login">Login</string>
    <string name="change_login">Change login</string>
    <string name="settings_about_me">About me</string>
    <string name="description">Description</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили смс с кодом проверки на ваш телефон</string>
    <string name="register_phone_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Ввелите номер телефона</string>
</resources>